# Esercizietti

./: Concatenation_s.py  Find primes.py  Leap_year_dario.py  List_combonation_s.py  List_exercise_1.py  Multiplication and sum for multiples.py  README.md  Ripasso_s.py  binary_tree.py  chatty_aws_stack.py  check_item_s.py  contiguous_subarray_sum.py  delete_dupes_from_list.py  fibonacci.py  fit.py  guessing_game.py  guessing_game_s.py  leap_years.py  max_sliding_window.py  merge_sort.py  merging_lists_s.py  primes.py  project.md  pyproject.toml  requirements.txt  return_odd_positions_s  return_odd_positions_s.py  ripasso.py  running_total_s.py  sampled.py  server.http  server.py  shuffle.py  shuffled.py  spacy_test.py  sum_numbers.py  sum_numbers_5.py  sum_numbers_6.py  test.py
logging/: __init__.py
