[tool.poetry]
name = "esercizi"
version = "0.1.0"
description = ""
authors = ["Dario Bigongiari <dario.bigongiari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.43.0"
pandas = "^1.4.2"
requests = "^2.27.1"
oauth2client = "^4.1.3"
apiclient = "^1.0.4"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
