[tool.poetry]
name = "esercizietti"
version = "0.1.0"
description = ""
authors = ["Dario Bigongiari <dariobig@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.2.4"
google-api-python-client = "^2.48.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
